add services and plastic-surgery

--- a/templates/base.html
+++ b/templates/base.html
@@ -50,29 +50,29 @@
                   >Home<i class="fas fa-chevron-down"></i
                 ></a>
                 <div class="dropdown-menu">
-                  <a href="index.html#services" class="dropdown-link"
+                  <a href="/#services" class="dropdown-link"
                     >Our Services</a
                   >
-                  <a href="index.html#armenia" class="dropdown-link"
+                  <a href="/#armenia" class="dropdown-link"
                     >Why Armenia</a
                   >
-                  <a href="index.html#latest-news" class="dropdown-link"
+                  <a href="/#latest-news" class="dropdown-link"
                     >Latest News</a
                   >
-                  <a href="index.html#articles" class="dropdown-link"
+                  <a href="/#articles" class="dropdown-link"
                     >Articles</a
                   >
-                  <a href="index.html#contact" class="dropdown-link"
+                  <a href="/#contact" class="dropdown-link"
                     >Contact with Us</a
                   >
                 </div>
               </li>
               <li class="nav-item">
-                <a href="services.html" class="nav-link"
+                <a href="/services" class="nav-link"
                   >Services<i class="fas fa-chevron-down"></i
                 ></a>
                 <div class="dropdown-menu">
-                  <a href="plastic-surgery.html" class="dropdown-link"
+                  <a href="/plastic-surgery" class="dropdown-link"
                     >Plastic Surgery</a
                   >
                   <a href="dentistry.html" class="dropdown-link">Dentistry</a>
