--- a/templates/plastic-surgery.html
+++ b/templates/plastic-surgery.html
@@ -26,7 +26,7 @@
               style="text-decoration: none; color: inherit"
             >
               <img
-                src="images/face-lift.png"
+                src="/static/images/face-lift.png"
                 alt="Face Lift Surgery"
                 class="service-icon"
               />
@@ -43,7 +43,7 @@
               style="text-decoration: none; color: inherit"
             >
               <img
-                src="images/blepharoplasty.png"
+                src="/static/images/blepharoplasty.png"
                 alt="Blepharoplasty"
                 class="service-icon"
               />
@@ -60,7 +60,7 @@
               style="text-decoration: none; color: inherit"
             >
               <img
-                src="images/rhinoplasty.png"
+                src="/static/images/rhinoplasty.png"
                 alt="Rhinoplasty"
                 class="service-icon"
               />
@@ -76,7 +76,7 @@
               class="service-button"
               style="text-decoration: none; color: inherit"
             >
-              <img src="images/liposuction.png" alt="Liposuction
+              <img src="/static/images/liposuction.png" alt="Liposuction
               class="service-icon" />
               <h3>Liposuction</h3>
               <p>
@@ -91,7 +91,7 @@
               style="text-decoration: none; color: inherit"
             >
               <img
-                src="images/abdominoplasty.png"
+                src="/static/images/abdominoplasty.png"
                 alt="Abdominoplasty"
                 class="service-icon"
               />
@@ -108,7 +108,7 @@
               style="text-decoration: none; color: inherit"
             >
               <img
-                src="images/mamoplasty.png"
+                src="/static/images/mamoplasty.png"
                 alt="Mamoplasty"
                 class="service-icon"
               />
@@ -125,7 +125,7 @@
               style="text-decoration: none; color: inherit"
             >
               <img
-                src="images/lip-plasty.png"
+                src="/static/images/lip-plasty.png"
                 alt="Lip Plasty"
                 class="service-icon"
               />
@@ -142,7 +142,7 @@
               style="text-decoration: none; color: inherit"
             >
               <img
-                src="images/brachioplasty.png"
+                src="/static/images/brachioplasty.png"
                 alt="Brachioplasty"
                 class="service-icon"
               />
@@ -159,7 +159,7 @@
               style="text-decoration: none; color: inherit"
             >
               <img
-                src="images/lipofilling.png"
+                src="/static/images/lipofilling.png"
                 alt="Lipofilling"
                 class="service-icon"
               />
