--- a/static/css/style.css
+++ b/static/css/style.css
@@ -4,7 +4,7 @@ body {
   margin: 0;
   padding: 0;
   background-color: #f9f9ff;
-  background-image: url("../images/background.jpg");
+  background-image: url("/static/images/background.jpg");
   /* Path to your image */
   background-size: cover;
   /* Scale the image to cover the whole page */
