--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -12,7 +12,8 @@
   <div class="auth-card">
     <h2>Create an Account</h2>
     <p>Register a new account to get started</p>
-    <form id="registerForm">
+    <form id="registerForm" method="post">
+      {% csrf_token %}
       <div class="form-group">
         <label for="name">Name</label>
         <input type="text" name="username" id="name" placeholder="Your name" required />
@@ -49,6 +50,19 @@
           required
         />
       </div>
+
+      {% if form.errors %}
+      <ul>
+        {% for field, errors in form.errors.items %}
+        <li>{{ field }}:
+          {% for error in errors %}
+          {{ error }}
+          {% endfor %}
+        </li>
+        {% endfor %}
+      </ul>
+      {% endif %}
+
       <button type="submit" class="btn btn-primary custom-login-button">
         Register
       </button>
