--- a/templates/base.html
+++ b/templates/base.html
@@ -22,6 +22,7 @@
       rel="stylesheet"
     />
 
+    <link rel="stylesheet" href="{% static 'css/style.css' %}" />
     <link rel="stylesheet" href="{% static 'css/header.css' %}" />
     <link rel="stylesheet" href="{% static 'css/footer.css' %}" />
 
@@ -46,7 +47,7 @@
           <nav>
             <ul class="nav">
               <li class="nav-item">
-                <a href="index.html" class="nav-link"
+                <a href="/" class="nav-link"
                   >Home<i class="fas fa-chevron-down"></i
                 ></a>
                 <div class="dropdown-menu">
@@ -75,7 +76,7 @@
                   <a href="/plastic-surgery" class="dropdown-link"
                     >Plastic Surgery</a
                   >
-                  <a href="dentistry.html" class="dropdown-link">Dentistry</a>
+                  <a href="/dentistry" class="dropdown-link">Dentistry</a>
                   <a href="clinics.html" class="dropdown-link">Clinics</a>
                   <a href="consultation.html" class="dropdown-link"
                     >Consultation</a
