add a couple of pages

--- a/templates/base.html
+++ b/templates/base.html
@@ -77,8 +77,8 @@
                     >Plastic Surgery</a
                   >
                   <a href="/dentistry" class="dropdown-link">Dentistry</a>
-                  <a href="clinics.html" class="dropdown-link">Clinics</a>
-                  <a href="consultation.html" class="dropdown-link"
+                  <a href="/clinics" class="dropdown-link">Clinics</a>
+                  <a href="/consultation" class="dropdown-link"
                     >Consultation</a
                   >
                 </div>
@@ -88,17 +88,17 @@
                   >Find a doctor<i class="fas fa-chevron-down"></i
                 ></a>
                 <div class="dropdown-menu">
-                  <a href="plastic-surgeons.html" class="dropdown-link"
+                  <a href="/plastic-surgeons" class="dropdown-link"
                     >Plastic Surgeons</a
                   >
-                  <a href="dentists.html" class="dropdown-link">Dentists</a>
+                  <a href="/dentists" class="dropdown-link">Dentists</a>
                 </div>
               </li>
               <li class="nav-item">
-                <a href="clinics.html" class="nav-link">Clinics</a>
+                <a href="/clinics" class="nav-link">Clinics</a>
               </li>
               <li class="nav-item">
-                <a href="partner.html" class="nav-link">Become a partner</a>
+                <a href="/partner" class="nav-link">Become a partner</a>
               </li>
             </ul>
           </nav>
