--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -6,6 +6,7 @@
 {% load static %}
   <!-- Services Section -->
   <section id="services" class="services my-5">
+    <link rel="stylesheet" href="{% static 'css/style.css' %}" />
     <div class="container">
       <h2 class="text-center">Our Services</h2>
       <p class="text-center">
