--- a/static/css/footer.css
+++ b/static/css/footer.css
@@ -1,8 +1,11 @@
 /* Footer */
-.footer {
+#footer {
   background: linear-gradient(90deg, #8cc7f8, #6d98d9);
   /* Linear gradient from left to right */
   padding: 2rem 0;
   color: white;
   text-align: center;
+  width: 100% !important;
+  margin-top: 20px !important;
+  margin-bottom: 0;
 }
