--- a/static/css/login-register.css
+++ b/static/css/login-register.css
@@ -5,8 +5,10 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  height: 120vh;
   margin: 0;
+  flex-direction: column !important;
+  justify-content: space-between;
 }
 
 .container {
