--- a/medical_backend/templates/account/signup.html
+++ b/medical_backend/templates/account/signup.html
@@ -50,7 +50,7 @@
           required
         />
       </div>
-      <button type="submit" class="btn btn-primary custom-login-button">
+      <button type="submit" class="btn btn-primary">
         Register
       </button>
     </form>
