--- a/templates/account/password_reset.html
+++ b/templates/account/password_reset.html
@@ -3,15 +3,13 @@
 
 {% block title %}Forgot Password{% endblock %} 
 
-{% block stylesheet %} 
 {% load static %}
-<link rel="stylesheet" href="{% static 'css/login-register.css' %}" />
-{% endblock %}
 
 {% block body %}
 
 <!-- Modal Structure -->
 <div id="forgotPasswordModal" class="modal">
+  <link rel="stylesheet" href="{% static 'css/login-register.css' %}" />
   <div class="auth-card">
     <h2>Set a new password</h2>
     <p>
@@ -32,7 +30,7 @@
         />
       </div>
 
-      <button type="submit" class="btn btn-primary custom-send-button">
+      <button type="submit" class="btn btn-primary">
         Send link
       </button>
     </form>
