--- a/templates/plastic-surgery.html
+++ b/templates/plastic-surgery.html
@@ -21,7 +21,7 @@
             <!-- Plastic Surgery Services -->
 
             <a
-              href="face-lift(text).html"
+              href="/plastic-surgery/face-lift"
               class="service-button"
               style="text-decoration: none; color: inherit"
             >
@@ -38,7 +38,7 @@
             </a>
 
             <a
-              href="blepharoplasty.html"
+              href="/plastic-surgery/blepharoplasty"
               class="service-button"
               style="text-decoration: none; color: inherit"
             >
@@ -55,7 +55,7 @@
             </a>
 
             <a
-              href="rhinoplasty.html"
+              href="/plastic-surgery/rhinoplasty"
               class="service-button"
               style="text-decoration: none; color: inherit"
             >
@@ -72,7 +72,7 @@
             </a>
 
             <a
-              href="liposuction.html"
+              href="/plastic-surgery/liposuction"
               class="service-button"
               style="text-decoration: none; color: inherit"
             >
@@ -86,7 +86,7 @@
             </a>
 
             <a
-              href="abdominoplasty.html"
+              href="/plastic-surgery/abdominoplasty"
               class="service-button"
               style="text-decoration: none; color: inherit"
             >
@@ -103,7 +103,7 @@
             </a>
 
             <a
-              href="mamoplasty.html"
+              href="/plastic-surgery/mamoplasty"
               class="service-button"
               style="text-decoration: none; color: inherit"
             >
@@ -120,7 +120,7 @@
             </a>
 
             <a
-              href="lip.html"
+              href="/plastic-surgery/lip"
               class="service-button"
               style="text-decoration: none; color: inherit"
             >
@@ -137,7 +137,7 @@
             </a>
 
             <a
-              href="brachioplasty.html"
+              href="/plastic-surgery/brachioplasty"
               class="service-button"
               style="text-decoration: none; color: inherit"
             >
@@ -154,7 +154,7 @@
             </a>
 
             <a
-              href="lipofilling.html"
+              href="/plastic-surgery/lipofilling"
               class="service-button"
               style="text-decoration: none; color: inherit"
             >
