--- a/medical_backend/templates/account/login.html
+++ b/medical_backend/templates/account/login.html
@@ -32,7 +32,7 @@
           required
         />
       </div>
-      <button type="submit" class="btn btn-primary custom-login-button">
+      <button type="submit" class="btn btn-primary">
         Log in
       </button>
     </form>
@@ -60,7 +60,7 @@
           required
         />
       </div>
-      <button type="submit" class="btn btn-primary custom-send-button">
+      <button type="submit" class="btn btn-primary">
         Send link
       </button>
     </form>
