--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -46,7 +46,7 @@
         </ul>
         {% endif %}
   
-        <button type="submit" class="btn btn-primary custom-login-button">
+        <button type="submit" class="btn btn-primary">
           Log in
         </button>
       </form>
@@ -74,7 +74,7 @@
             required
           />
         </div>
-        <button type="submit" class="btn btn-primary custom-send-button">
+        <button type="submit" class="btn btn-primary">
           Send link
         </button>
       </form>
