--- a/medical_backend/templates/account/signup.html
+++ b/medical_backend/templates/account/signup.html
@@ -10,8 +10,8 @@
 {% block body %}
 <div class="auth-container">
   <div class="auth-card">
-    <h2>Create an Account bebebe</h2>
-    <p>Register a new account to get started bebebe</p>
+    <h2>Create an Account </h2>
+    <p>Register a new account to get started</p>
     <form method="post" id="registerForm"  action="{% url 'account_signup' %}">
       {% csrf_token %}
       <div class="form-group">
