--- a/medical_backend/templates/homepage.html
+++ b/medical_backend/templates/homepage.html
@@ -18,7 +18,7 @@
 
       <div class="services-list">
         <!-- Service 1 -->
-        <button class="service-button" id="plasticSurgeryButton">
+        <button class="service-button" href="{% url 'plastic_surgery' %}" id="plasticSurgeryButton">
           <img
             src="{% static 'images/Plastic-surgery.png' %}"
             alt="Plastic-surgery"
