--- a/templates/dentists.html
+++ b/templates/dentists.html
@@ -35,7 +35,7 @@
                 >
                     <button class="dentist-card">
                         <img
-                                src="images/dentist1.png"
+                                src="/static/images/dentist1.png"
                                 alt="David Hovhannisyan"
                                 class="dentist-image"
                         />
@@ -51,7 +51,7 @@
                 >
                     <button class="dentist-card">
                         <img
-                                src="images/dentist2.png"
+                                src="/static/images/dentist2.png"
                                 alt="Naira Hovhannisyan"
                                 class="dentist-image"
                         />
@@ -65,7 +65,7 @@
                 >
                     <button class="dentist-card">
                         <img
-                                src="images/dentist3.png"
+                                src="/static/images/dentist3.png"
                                 alt="David Yeganyan"
                                 class="dentist-image"
                         />
@@ -79,7 +79,7 @@
                 >
                     <button class="dentist-card">
                         <img
-                                src="images/dentist4.png"
+                                src="/static/images/dentist4.png"
                                 alt="David Grigoryan"
                                 class="dentist-image"
                         />
@@ -93,7 +93,7 @@
                 >
                     <button class="dentist-card">
                         <img
-                                src="images/dentist5.png"
+                                src="/static/images/dentist5.png"
                                 alt="Anghela Papoyan"
                                 class="dentist-image"
                         />
@@ -107,7 +107,7 @@
                 >
                     <button class="dentist-card">
                         <img
-                                src="images/dentist6.png"
+                                src="/static/images/dentist6.png"
                                 alt="Martik Hartoonian"
                                 class="dentist-image"
                         />
@@ -121,7 +121,7 @@
                 >
                     <button class="dentist-card">
                         <img
-                                src="images/dentist7.png"
+                                src="/static/images/dentist7.png"
                                 alt="Urfa Dehbashyan"
                                 class="dentist-image"
                         />
@@ -135,7 +135,7 @@
                 >
                     <button class="dentist-card">
                         <img
-                                src="images/dentist8.png"
+                                src="/static/images/dentist8.png"
                                 alt="Petros Yeranosyan"
                                 class="dentist-image"
                         />
@@ -149,7 +149,7 @@
                 >
                     <button class="dentist-card">
                         <img
-                                src="images/dentist9.png"
+                                src="/static/images/dentist9.png"
                                 alt="Mariam Aleqyan"
                                 class="dentist-image"
                         />
@@ -163,7 +163,7 @@
                 >
                     <button class="dentist-card">
                         <img
-                                src="images/dentist10.png"
+                                src="/static/images/dentist10.png"
                                 alt="Mariam Karavardanyan"
                                 class="dentist-image"
                         />
@@ -177,7 +177,7 @@
                 >
                     <button class="dentist-card">
                         <img
-                                src="images/dentist11.png"
+                                src="/static/images/dentist11.png"
                                 alt="Lena Harutyunyan"
                                 class="dentist-image"
                         />
@@ -194,4 +194,4 @@
 
 {% block scripts %}
 <script src="{% static 'js/dentists.js' %}"></script>
-{% endblock %}}
+{% endblock %}
