--- a/templates/partner.html
+++ b/templates/partner.html
@@ -18,7 +18,7 @@
         <div class="left-section">
             <h2 class="title">Partner with HealMount</h2>
             <img
-                    src="images/partner.png"
+                    src="/static/images/partner.png"
                     alt="Partner Image"
                     class="partner_image"
             />
