--- a/templates/plastic-surgeons.html
+++ b/templates/plastic-surgeons.html
@@ -37,7 +37,7 @@
         >
           <button class="surgeon-card">
             <img
-                    src="images/surgeon1.jpg"
+                    src="/static/images/surgeon1.jpg"
                     alt="Ashot V. Matevosyan"
                     class="surgeon-image"
             />
@@ -51,7 +51,7 @@
         >
           <button class="surgeon-card">
             <img
-                    src="images/surgeon2.png"
+                    src="/static/images/surgeon2.png"
                     alt="Andrey L. Istranov"
                     class="surgeon-image"
             />
@@ -65,7 +65,7 @@
         >
           <button class="surgeon-card">
             <img
-                    src="images/surgeon3.jpg"
+                    src="/static/images/surgeon3.jpg"
                     alt="Gracha M. Aslanyan"
                     class="surgeon-image"
             />
@@ -79,7 +79,7 @@
         >
           <button class="surgeon-card">
             <img
-                    src="images/surgeon4.png"
+                    src="/static/images/surgeon4.png"
                     alt="Hrach K. Mikayelyan"
                     class="surgeon-image"
             />
@@ -93,7 +93,7 @@
         >
           <button class="surgeon-card">
             <img
-                    src="images/surgeon5.png"
+                    src="/static/images/surgeon5.png"
                     alt="Hayko H. Kettsyan"
                     class="surgeon-image"
             />
@@ -107,7 +107,7 @@
         >
           <button class="surgeon-card">
             <img
-                    src="images/surgeon6.jpg"
+                    src="/static/images/surgeon6.jpg"
                     alt="Christina V. Grigoryan"
                     class="surgeon-image"
             />
@@ -121,7 +121,7 @@
         >
           <button class="surgeon-card">
             <img
-                    src="images/surgeon7.jpg"
+                    src="/static/images/surgeon7.jpg"
                     alt="Yevgeny A. Malyukov"
                     class="surgeon-image"
             />
@@ -135,7 +135,7 @@
         >
           <button class="surgeon-card">
             <img
-                    src="images/surgeon8.jpg"
+                    src="/static/images/surgeon8.jpg"
                     alt="Hayk H. Partizpanyan"
                     class="surgeon-image"
             />
@@ -149,7 +149,7 @@
         >
           <button class="surgeon-card">
             <img
-                    src="images/surgeon9.jpeg"
+                    src="/static/images/surgeon9.jpeg"
                     alt="Svetlana A. Avagyan"
                     class="surgeon-image"
             />
@@ -163,7 +163,7 @@
         >
           <button class="surgeon-card">
             <img
-                    src="images/surgeon10.jpg"
+                    src="/static/images/surgeon10.jpg"
                     alt="Mikayel A. Vasilyan"
                     class="surgeon-image"
             />
@@ -177,7 +177,7 @@
         >
           <button class="surgeon-card">
             <img
-                    src="images/surgeon11.png"
+                    src="/static/images/surgeon11.png"
                     alt="Nune A. Issagholyan"
                     class="surgeon-image"
             />
